syntax = "proto3";

option go_package = ".;status_api";

package status_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "model/model.proto";

service StatusAPI {
  // Health returns the health of the API.
  rpc HealthGRPC (google.protobuf.Empty) returns (HealthResponse) {}
  rpc AnnounceStatus (model.AnnounceStatusRequest) returns (google.protobuf.Empty) {}
}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

